utilized bootstrap cards to create whole site, will fix alignments

--- a/style.css
+++ b/style.css
@@ -1,31 +1,12 @@
-#page-wrapper {
-    width: 100%;
-    max-width: 960px;
-    margin: 0 auto;
-}
-
 .nav {
     float: right;
     border-style: solid;
 }
 
-.content-wrapper {
-    margin-top: 55px;
-    border-style: solid;
-    display: inline-block;
-}
 
 img {
     width: 200px;
     height: 200px;
     float: left;
     margin-right: 15px;
-}
-
-#description {
-    display: inline;
-}
-
-#main {
-    text-align: justify;
 }
